Pasta vendor js ajustada e o index.html também.

--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@
         <header>
             ...
         </header>
-        <div>
+        <section>
             ...
-        </div>
+        </section>
         <footer>
             ...
         </footer>
+        <script src="js/vendor/jquery-1.8.3.min.js"></script>
+        <script src="js/vendor/TweenMax.min.js"></script>
         <script src="js/main.min.js"></script>
     </body>
 </html>
